@@ -2,8 +2,8 @@ package Whelk::Schema::Definition::Object;
 
 use Whelk::StrictBase 'Whelk::Schema::Definition';
 
-attr properties => undef;
-attr strict => !!0;
+attr '?properties' => undef;
+attr '?strict' => !!0;
 
 sub openapi_dump
 {
