@@ -1,6 +1,0 @@
-{
-	resources => {
-		'Typo' => '/',
-	},
-}
-
