@@ -18,7 +18,7 @@ subtest 'schemas are strict' => sub {
 				minimum => 5,    # not supported yet
 			},
 		);
-	} qr{attribute minimum is not valid for class .+Integer[^.]};
+	} qr{attribute 'minimum' is not valid for class .+Integer[^.]};
 
 	throws_ok {
 		Whelk::Schema->build(
@@ -29,18 +29,18 @@ subtest 'schemas are strict' => sub {
 				}
 			},
 		);
-	} qr{attribute properties is not valid for class .+Array[^.]};
+	} qr{attribute 'properties' is not valid for class .+Array[^.]};
 
 	throws_ok {
 		Whelk::Schema->build(
 			test_int => {
 				type => 'array',
-				itmes => {
+				times => {
 					type => 'boolean',
 				}
 			},
 		);
-	} qr{attribute itmes is not valid for class .+Array\Q. Did you mean items?\E};
+	} qr{attribute 'times' is not valid for class .+Array\Q. Did you mean 'items'?\E};
 
 	throws_ok {
 		Whelk::Schema->build(
@@ -49,7 +49,7 @@ subtest 'schemas are strict' => sub {
 				descrption => 'test',
 			},
 		);
-	} qr{attribute descrption is not valid for class .+String\Q. Did you mean description?\E};
+	} qr{attribute 'descrption' is not valid for class .+String\Q. Did you mean 'description'?\E};
 
 	# extended attribute
 	lives_ok {
@@ -63,9 +63,23 @@ subtest 'schemas are strict' => sub {
 };
 
 subtest 'endpoints are strict' => sub {
+	$ENV{KELP_REDEFINE} = 1;
+
 	throws_ok {
-		my $app = Whelk->new(mode => 'typo');
-	} qr{attribute respnose is not valid.+ \QDid you mean response?\E};
+		my $app = Whelk->new(
+			__config => {
+				resources => {'Typo::Endpoint' => '/'},
+			}
+		);
+	} qr{attribute 'ersponse' is not valid.+ \QDid you mean 'response'?\E};
+
+	throws_ok {
+		my $app = Whelk->new(
+			__config => {
+				resources => {'Typo::Parameters' => '/'},
+			}
+		);
+	} qr{attribute 'hedaer' is not valid.+ \QDid you mean 'header'?\E};
 };
 
 done_testing;
